--- a/style.css
+++ b/style.css
@@ -114,3 +114,9 @@ nav ul li a {
       }
  
 }
+
+h1.x{
+    font-family: AXIS;
+    src url(http://dl.dropboxusercontent.com/s/183zcebvhjyivxm/Axis%2520Extrabold.otf); 
+})
+}
